assets/Hero1.css
.hero1 {
    width: 100%;
    overflow: hidden;
    position: relative;
    margin-bottom: 50px;
}
.hero1--25vh {
    height: 25vh;
}
.hero1--50vh {
    height: 50vh;
}
.hero1--75vh {
    height: 75vh;
}
.hero1--100vh {
    height: 100vh;
}
.hero1--aligned-center .hero1__content-container {
    justify-content: center;
}
.hero1--aligned-left .hero1__content-container {
    justify-content: flex-start;
    padding-left: 1rem;
}
.hero1--aligned-right .hero1__content-container {
    justify-content: flex-end;
    padding-right: 1rem;
}
.hero1__bg {
    position: absolute;
    -o-object-fit: cover;
    object-fit: cover;
    -o-object-position: center;
    object-position: center;
    width: 100%;
    height: 100%;
    z-index: 1;
}
.hero1__content-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
}
.hero1__info {
    max-width: 400px;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.hero1__title {
    /* font-size: 3rem; */
    font-family: "Bebas Neue", cursive;
    color: #fff;
}
.hero1__title--sm {
    font-size: 2rem;
}
.hero1__title--md {
    font-size: 3rem;
}
.hero1__title--lg {
    font-size: 4.5rem;
}
.hero1__title--xl {
    font-size: 6rem;
}
.hero1__paragraph {
    margin-bottom: 2rem;
}
.hero1__button {
    padding: 15px 30px;
    background: #fff;
    text-align: center;
    width: 200px;
    text-decoration: none;
    cursor: pointer;
    font-weight: 700;
    font-size: 0.8rem;
}

